# ZephyrOSFlatpaks

./: README.md  buzz.zephyros.hello.json  index.flatpakrepo  index.html  meson.build  public.key
.github/workflows/: build.yml
data/: buzz.zephyros.hello.desktop.in  buzz.zephyros.hello.gschema.xml  buzz.zephyros.hello.metainfo.xml.in  buzz.zephyros.hello.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: buzz.zephyros.hello.data.gresource.xml  buzz.zephyros.hello.src.gresource.xml  main.js  meson.build  window.js  window.ui
